{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "ea0904ea-cd09-4597-b72e-76f1106c46c7",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "9ed15ff6-18e5-46ba-99a7-1b9b86ada7e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VirarCaldeirao",
                    "type": "Button",
                    "id": "fc1a56eb-d7e1-4580-8174-79f713565e59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MexerComColher",
                    "type": "Button",
                    "id": "7592a7d3-94e2-4ed6-ad03-c67873f0abbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "45724be5-6522-4d34-a377-0b966a8e01cc",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14c80f93-268c-4687-9c22-0044f02faddd",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VirarCaldeirao",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "009c2d11-b77f-4be3-afb6-6c633bfac1a4",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MexerComColher",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}